Removed the closing "/" on the img tag and removed "rev" query string on the IMG src

--- a/Search Display Templates/Getting past the item limit control template (CSWP)/Control_List_All.html
+++ b/Search Display Templates/Getting past the item limit control template (CSWP)/Control_List_All.html
@@ -96,7 +96,7 @@ ctx.RenderGroups(ctx);
 _#-->
     
     <div id="_#= elmId =#_" class="all-items"> 
-        <h2 class="ms-accentText"><img src="/_layouts/15/images/gears_anv4.gif?rev=23" alt="Loading image" width="16" /> Retrieving results</h2>
+        <h2 class="ms-accentText"><img src="/_layouts/15/images/gears_anv4.gif" alt="Loading image" width="16"> Retrieving results</h2>
     </div>
     
 <!--#_
