--- a/Search Display Templates/mAdcOW Search Center Templates/mAdcOW/Item_DocumentLink_Body.html
+++ b/Search Display Templates/mAdcOW Search Center Templates/mAdcOW/Item_DocumentLink_Body.html
@@ -11,7 +11,7 @@
 <mso:TargetControlType msdt:dt="string">;#SearchResults;#</mso:TargetControlType>
 <mso:HtmlDesignAssociated msdt:dt="string">1</mso:HtmlDesignAssociated>
 <mso:ManagedPropertyMapping msdt:dt="string">'Title':'Title','Path':'Path','Description':'Description','EditorOWSUSER':'EditorOWSUSER','LastModifiedTime':'LastModifiedTime','CollapsingStatus':'CollapsingStatus','DocId':'DocId','HitHighlightedSummary':'HitHighlightedSummary','HitHighlightedProperties':'HitHighlightedProperties','FileExtension':'FileExtension','ViewsLifeTime':'ViewsLifeTime','ParentLink':'ParentLink','FileType':'FileType','IsContainer':'IsContainer','SecondaryFileExtension':'SecondaryFileExtension','DisplayAuthor':'DisplayAuthor','URLOWSURLH':'URLOWSURLH'</mso:ManagedPropertyMapping>
-<mso:HtmlDesignStatusAndPreview msdt:dt="string">https://sharepoint.2wglobal.com/portals/sysit/_catalogs/masterpage/Display%20Templates/Search/Item_CommonItem_Body.html, Conversion successful.</mso:HtmlDesignStatusAndPreview>
+<mso:HtmlDesignStatusAndPreview msdt:dt="string">https://contoso.sharepoint.com/portals/sysit/_catalogs/masterpage/Display%20Templates/Search/Item_CommonItem_Body.html, Conversion successful.</mso:HtmlDesignStatusAndPreview>
 <mso:HtmlDesignConversionSucceeded msdt:dt="string">True</mso:HtmlDesignConversionSucceeded>
 <mso:CrawlerXSLFile msdt:dt="string"></mso:CrawlerXSLFile>
 <mso:HtmlDesignPreviewUrl msdt:dt="string"></mso:HtmlDesignPreviewUrl>
